--- a/conquez/authen/templates/authen/home.html
+++ b/conquez/authen/templates/authen/home.html
@@ -17,7 +17,7 @@
         <div class="col-sm-12 mb-3">
             <h4 class="text-center">Welcome Back, {{ user.username }}</h4>
         </div>
-        <header><a href="#">Profile</a> </header>
+        <header><a href="{% url 'profile' %}">Profile</a> </header>
         <div class="col-sm-12 mt-2 text-center">
             <button class="btn btn-danger">
                 <a href="{% url 'logout' %}">Logout</a>
