--- a/conquez/authen/templates/authen/home.html
+++ b/conquez/authen/templates/authen/home.html
@@ -22,6 +22,7 @@
             <button class="btn btn-danger">
                 <a href="{% url 'logout' %}">Logout</a>
             </button>
+            <a href="{% url 'antarctica' %}">Antarctica???</a>
         </div>
     </div>
     <div>
