--- a/design/Bisht/india - Copy/css/style.css
+++ b/design/Bisht/india - Copy/css/style.css
@@ -8,7 +8,7 @@ body{
 #container{
     /*background-image: linear-gradient(teal, teal,  limegreen);*/
     background-color: teal;
-    height: 85%;
+    height: 75%;
     width : 85%;
     border-radius: 5px;
     box-shadow: 1px 5px 10px 5px;
@@ -16,7 +16,7 @@ body{
     /*margin: 10% auto 0px;*/
     cursor: pointer;
     left: 7%;
-    bottom: 1%;
+    bottom: 3%;
 
 }
 /*#img{*/
@@ -49,12 +49,12 @@ body{
 }
 
 #question{
-    width: inherit;
-    height : 120px;
-    position: relative;
+    width: 100%;
+    height : 43%;
+    position: absolute;
     right:0;
     /*top:70px;*/
-    background-color: lightgreen;
+    background-color: wheat;
 }
 #question p{
     margin : 0;
@@ -72,7 +72,7 @@ body{
     margin: 0 auto;
     position: absolute;
     right : 0;
-    bottom: 100px;
+    bottom: 0px;
     padding : 10px;
     text-align: center;
 }
@@ -95,7 +95,7 @@ body{
     position: absolute;
     height : 100px;
     width : 200px;
-    bottom : 0px;
+    top : -20%;
     text-align: center;
 }
 #counter{
@@ -118,7 +118,7 @@ body{
 #progress{
     width : 350px;
     position: absolute;
-    bottom : 5px;
+    top : -20%;
     right : 0px;
     padding-right:10px;
     padding-bottom: 30px;
@@ -176,15 +176,15 @@ body{
     /*height: 500px;*/
     /*width : 350px;*/
     /*border-radius: 5px;*/
-    position: relative;
+    /*position: relative;*/
     /*display: none;*/
-    text-align: center;
+    /*text-align: center;*/
     background-color: teal;
-    height: 85%;
-    width : 85%;
+    height: 90%;
+    width : 90%;
     border-radius: 5px;
     box-shadow: 1px 5px 10px 5px;
-    /*position: absolute;*/
+    position: absolute;
     /*margin: 10% auto 0px;*/
     /*cursor: pointer;*/
     left: 7%;
@@ -198,6 +198,7 @@ body{
 
 #answerContainer a {
   display: block;
+    left: 43%;
   padding-bottom: 40px;
 }
 
