--- a/design/Bisht/india/css/style.css
+++ b/design/Bisht/india/css/style.css
@@ -12,8 +12,9 @@ body{
     width : 350px;
     border-radius: 5px;
     box-shadow: 0px 5px 10px 0px;
-    position: relative;
-    margin: 10% auto 0px;
+    position: absolute;
+    /*margin: 10% auto 0px;*/
+    bottom: 5%;
     cursor: pointer;
 
 }
@@ -88,7 +89,7 @@ body{
     position: absolute;
     height : 100px;
     width : 200px;
-    bottom : 0px;
+    top : -20%;
     text-align: center;
 }
 #counter{
@@ -111,7 +112,7 @@ body{
 #progress{
     width : 350px;
     position: absolute;
-    bottom : 5px;
+    top : -20%;
     right : 0px;
     padding-right:10px;
     padding-bottom: 30px;
