--- a/design/Bisht/files/css/burger.css
+++ b/design/Bisht/files/css/burger.css
@@ -16,11 +16,9 @@
     visibility: hidden;
  }
 }
-
 * {
   box-sizing: border-box;
 }
-/**/
 body:after {
   background: rgba(255, 255, 255, 1);
   content: '';
@@ -32,23 +30,19 @@ body:after {
   position: absolute;
   top: 0;
   transition: all 0.4s ease;
-  /*width: 100%;*/
+  width: 100%;
 }
 body.open {
   overflow: hidden;
 }
-
 body.open:after {
   opacity: 1;
   visibility: visible;
 }
-
-
 .b-nav {
   position: absolute;
   z-index: 11;
 }
-
 .b-nav:not(.open) {
   visibility: hidden;
 }
@@ -67,18 +61,14 @@ body.open:after {
 .b-nav li:first-child {
   padding-top: 120px;
 }
-
 .b-nav.open {
   visibility: visible;
 }
-
 .b-nav.open li {
   animation-duration: 0.4s;
   animation-fill-mode: both;
   animation-name: slideInLeft;
 }
-
-
 .b-link {
   background: transparent;
   border-left: rgba(68, 68, 68, 0) solid 2px;
@@ -91,21 +81,17 @@ body.open:after {
   transition: all 0.4s ease;
   width: auto;
 }
-
 .b-link:hover, .b-link--active {
   border-left: rgba(68, 68, 68, 1) solid 2px;
   padding-left: 30px;
 }
-
-
 .b-menu {
-
   border-radius: 50%;
   cursor: pointer;
   display: inline-block;
   height: 60px;
-  padding-left: 16px;
-  padding-top: 18px;
+  padding-left: 15.5px;
+  padding-top: 17.5px;
   position: relative;
   transition: all 0.4s ease;
   user-select: none;
@@ -147,11 +133,10 @@ body.open:after {
 }
 .b-container {
   height: 60px;
-  left: 30px;
+  left: 10px;
   position: absolute;
-  top: 30px;
+  top: 10px;
 }
-
 .b-container:hover:not(.open) .bun-top, .b-container:hover:not(.open) .bun-mid, .b-container:hover:not(.open) .bun-bottom {
   background: rgba(255, 255, 255, 1);
 }
