--- a/design/Bisht/canada/css/style.css
+++ b/design/Bisht/canada/css/style.css
@@ -19,7 +19,34 @@ body {
   width: 100%;
   height: 100%;
 }
-
+#answerContainer1{
+  position: relative;
+  margin: 30px;
+  width: 250px;
+  background-color: lightgreen;
+  height: 250px;
+}
+#answerContainer2{
+  position: relative;
+  margin: 30px;
+  width: 250px;
+  background-color: lightgreen;
+  height: 250px;
+}
+#answerContainer3{
+  position: relative;
+  margin: 30px;
+  width: 250px;
+  background-color: lightgreen;
+  height: 250px;
+}
+#answerContainer4{
+  position: relative;
+  margin: 30px;
+  width: 250px;
+  background-color: lightgreen;
+  height: 250px;
+}
 
 .card {
   display: block;
