--- a/conquez/country/static/turkey/burger/css/style.css
+++ b/conquez/country/static/turkey/burger/css/style.css
@@ -15,11 +15,12 @@ Primary style
 
 body {
   font-size: 100%;
-  background-color: #434f53;
+  font-family: "PT Sans", sans-serif;
+  color: #091d23;
 }
 
 a {
-  color: black;
+  color: #1e6074;
   text-decoration: none;
 }
 
@@ -75,7 +76,7 @@ header {
   display: inline-block;
   width: 18px;
   height: 3px;
-  background-color: #ffffff;
+  background-color: #474343;
   z-index: 10;
 }
 .cd-nav-trigger .cd-icon::before, .cd-nav-trigger .cd-icon:after {
@@ -85,7 +86,7 @@ header {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: #434f53;
+  background-color: #474343;
   /* Force Hardware Acceleration in WebKit */
   -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
@@ -134,7 +135,6 @@ header {
   transition-property: transform;
 }
 .cd-nav-trigger::before {
-  background-color: #434f53;
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
@@ -148,7 +148,7 @@ header {
   transition-delay: 0.4s;
 }
 .cd-nav-trigger::after {
-  background-color: #ffb441;
+  background-color: #091d23;
   -webkit-transform: scale(0);
   -moz-transform: scale(0);
   -ms-transform: scale(0);
@@ -185,12 +185,11 @@ header {
 }
 .cd-nav-trigger.close-nav .cd-icon {
   /* user clicks on the .cd-nav-trigger element - transform the icon */
-  background-color: #434f53;
+  background-color: rgba(255, 255, 255, 0);
 }
-.cd-nav-trigger.close-nav .cd-icon::before, .cd-nav-trigger.close-nav {
-  background-color: #434f53;
+.cd-nav-trigger.close-nav .cd-icon::before, .cd-nav-trigger.close-nav .cd-icon::after {
+  background-color: white;
 }
-
 .cd-nav-trigger.close-nav .cd-icon::before {
   -webkit-transform: translateY(0) rotate(45deg);
   -moz-transform: translateY(0) rotate(45deg);
@@ -215,7 +214,7 @@ header {
   width: 100%;
   padding: 80px 5%;
   z-index: 3;
-  background-color: #434f53;
+  background-color: #091d23;
   overflow: auto;
   /* this fixes the buggy scrolling on webkit browsers - mobile devices only - when overflow property is applied */
   -webkit-overflow-scrolling: touch;
@@ -317,7 +316,7 @@ header {
   z-index: 2;
 }
 .cd-overlay-nav span {
-  background-color: #434f53;
+  background-color: #091d23;
 }
 
 .cd-overlay-content {
@@ -325,7 +324,7 @@ header {
   z-index: 4;
 }
 .cd-overlay-content span {
-  background-color: #434f53;
+  background-color: #091d23;
 }
 
 .cd-content {
