--- a/conquez/static/turkey/main/css/style.css
+++ b/conquez/static/turkey/main/css/style.css
@@ -254,4 +254,16 @@ body {
 
 #score_container {
   text-align: center;
+  font-weight: 500;
+  font-size: 40px;
+  top: 50px;
+}
+
+#score_container a {
+  font-weight: 400;
+  font-size: 30px;
+  background-color: grey;
+  color: white;
+  padding: 20px 20px;
+  border-radius: 10px;
 }
