--- a/conquez/static/authen/main/css/main.css
+++ b/conquez/static/authen/main/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(62, 102, 233);
     overflow: hidden;
     position: fixed;
     height: 100%;
@@ -8,6 +8,7 @@ body {
 #globalArea {
     height: 93%;
     width: 94%;
+    position: absolute;
 }
 #infoBoard {
 
@@ -15,16 +16,16 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 10em;
+    width: 20em;
     height: 6em;
     line-height: 50px;
     text-align: center;
     color: white;
     font-size: 20px;
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(59, 59, 59);
     display: none;
-    opacity: 0.8;
-    border-radius: 4px;
+    opacity: 0.7;
+    border-radius: 5px;
 
 }
 
